src/objects/Dummy_Object_2__c.object
<CustomObject>
    <fields>
        <fullName>Dummy_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dummy Object</label>
        <referenceTo>Dummy_Object__c</referenceTo>
        <relationshipLabel>Dummy Objects 2</relationshipLabel>
        <relationshipName>Dummy_Objects_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Power__c</fullName>
        <label>Power</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <label>Strength</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weakness__c</fullName>
        <label>Weakness</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Dummy Object 2</label>
    <nameField>
        <label>Dummy Object 2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy Objects 2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>